--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
 	"start": "node ./index.js"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/francescobruschetti/IS2-esame-base.git"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "uuid-v4": "^0.1.0"
+  },
+  "author": "Francesco Bruschetti",
   "license": "ISC"
 }
