--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/francescobruschetti/IS2-esame-base.git"
+	"start": "node ./index.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
